--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,11 @@ repositories {
 
 dependencies {
     testImplementation(
-            "com.codeborne:selenide:6.12.4"
+            "com.codeborne:selenide:6.12.4",
+            "org.junit.jupiter:junit-jupiter:5.9.2"
     )
+}
+
+test {
+    useJUnitPlatform()
 }
